# dotfiles

./: LICENSE  README.md  discard.sh  flake.nix  sync.sh
alacritty/: config.toml  dark.toml  light.toml
bat/: config
btop/: btop.conf
cargo/: config.toml
dae/: .gitignore  cfg.dae
fish/: aliases.fish  color-scheme.fish  env.fish  interactive.fish  sync.sh
git/: .gitignore  aliases.ini  config.ini
hm/: i18n.nix  mod.nix  nixpkgs.nix  symlinks.nix
home-manager/: flake.nix  home.nix  mod.nix  nixpkgs.nix  pkgs.nix  sh.nix  symlinks.nix
mako/: config
mpv/: input.conf  mpv.conf
neovim/: init.lua  sync.sh
nixos/: boot.nix  configuration.nix  env.nix  flake.nix  hardware-configuration.nix  hardware.nix  hw.nix  local.nix  locale.nix  networking.nix  nix.nix  nixpkgs.nix  os.nix  pkgs.nix  programs.nix  sec.nix  services.nix  sync.sh  user.nix
nvim/: init.lua
nvim/lib/: Cargo.toml  flake.nix
nvim/lib/src/: case_conv.rs  im_switch.rs  lib.rs
nvim/lib/src/buf_history/: mod.rs  test.rs
nvim/lib/src/match_words/: mod.rs  test.rs
nvim/lib/src/select_word/: mod.rs  test.rs
nvim/lib/src/shorten_path/: mod.rs  pathdiff.rs
nvim/lib/src/u32_stack/: mod.rs  test.rs
nvim/lib/src/visual_block/: debug.rs  find_bound.rs  mod.rs  test.rs
nvim/lib/src/visual_block/greedy_match/: find_bound.rs  mod.rs  pair_bound.rs
nvim/lib/src/visual_block/stack_match/: mod.rs
os/: boot.nix  docs.nix  env.nix  hw-gen.nix  hw.nix  locale.nix  mod.nix  pkgs.nix  services.nix  user.nix
rofi/: launcher-cfg.rasi  powermenu-cfg.rasi
rsbin/: flake.nix
shf/: cfg.toml
(+519 files in other folders)
