[package]
name = "nvimcfg"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "fat"

[dependencies]
heck = "0.5"
zbus = { version = "5", default-features = false, features = ["async-io"] }
tokio = { version = "1", default-features = false, features = [
  "rt",
  "rt-multi-thread",
] }
